[package]
name = "boring-ownable"
description = "BoringOwnable - BoringCrypto/BoringOwnable contract written in Rust"
version = "0.1.0"
authors = ["Ryuhei Matsuda <ryuheimat3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="1.3.3" }
types = { package = "casper-types", version="1.3.3" }

[lib]
# crate-type = ["cdylib"]
name = "boring_ownable"
path = "src/lib.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]

